--- a/src/mods/AppItem/style.css
+++ b/src/mods/AppItem/style.css
@@ -1,11 +1,17 @@
 .container {
-  width: 750;
-  height: 96;
+  width: 187.5;
+  height: 160;
   justify-content: center;
   align-items: center;
 }
 
 .appName {
-  font-size: 48;
+  font-size: 20;
   color: #ffffff;
+}
+
+.iconContainer {
+  width: 70;
+  height: 70;
+  margin-bottom: 8;
 }
