--- a/src/mods/AppItem/style.css
+++ b/src/mods/AppItem/style.css
@@ -10,8 +10,8 @@
   color: #ffffff;
 }
 
-.iconContainer {
-  width: 70;
-  height: 70;
+.appicon {
+  width: 96;
+  height: 96;
   margin-bottom: 8;
 }
