--- a/src/mods/AppPanel/style.css
+++ b/src/mods/AppPanel/style.css
@@ -1,10 +1,7 @@
 .container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: transparent;
+  background-color: red;
+  width: 300;
+  height: 300;
 }
 
 .appItemContainer {
@@ -12,4 +9,5 @@
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
+  background-color: green;
 }
