--- a/src/mods/WallpaperButton/style.css
+++ b/src/mods/WallpaperButton/style.css
@@ -12,7 +12,8 @@
 }
 
 .buttonContainer {
-  width: 374;
+  /* width: 374; */
+  width: 750;
   height: 80;
   display: flex;
   justify-content: center;
