--- a/src/mods/AppItem/style.css
+++ b/src/mods/AppItem/style.css
@@ -1,13 +1,14 @@
 .container {
-  width: 187.5;
+  width: 175;
   height: 160;
   justify-content: center;
   align-items: center;
 }
 
 .appName {
-  font-size: 20;
+  font-size: 18;
   color: #ffffff;
+  text-overflow: ellipsis;
 }
 
 .appicon {
