--- a/src/mods/AppItem/style.css
+++ b/src/mods/AppItem/style.css
@@ -1,6 +1,7 @@
 .container {
-  width: 175;
-  height: 160;
+  width: 124;
+  height: 142;
+  margin-bottom: 24;
   justify-content: center;
   align-items: center;
 }
@@ -12,8 +13,8 @@
 }
 
 .appicon {
-  width: 96;
-  height: 96;
+  width: 80;
+  height: 80;
   margin-bottom: 8;
 }
 
