--- a/src/mods/SysApp/style.css
+++ b/src/mods/SysApp/style.css
@@ -13,13 +13,13 @@
 }
 
 .btn {
-	width:100;
-  height:100;
-  background-color:'#ff0000';
+	width:120;
+  height:120;
+  /* background-color:'#ff0000'; */
   align-items: center;
   justify-content: center;
   position: absolute;
-  border-radius: 50;
-  bottom: 50;
-  left: 50;
+  border-radius: 60;
+  bottom: 60;
+  left: 60;
 }
