--- a/src/mods/SysApp/style.css
+++ b/src/mods/SysApp/style.css
@@ -3,8 +3,8 @@
 }
 
 .image {
-	width:60;
-  height:60;
+	width:70;
+  height:70;
 }
 
 .text {
@@ -22,4 +22,13 @@
   border-radius: 60;
   bottom: 60;
   left: 325;
+}
+
+.transparentBG {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: transparent;
 }
