--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   flex: 1;
 }
 
+.mask {
+  position: 'absolute';
+  top: 0;
+  left: 0;
+  background-color: rgba(30, 30, 30, 0.2);
+}
+
 .slider {
   flex: 1;
 }
