--- a/src/mods/AppItem/style.css
+++ b/src/mods/AppItem/style.css
@@ -32,10 +32,15 @@
   height: 100;
   background-color: #ffffff;
   position: fixed;
-  top: -10;
-  left: 0;
   border-radius: 10;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+}
+
+.menuItem {
+  height: 100;
+  padding-left: 20;
+  padding-right: 20;
+  justify-content: center;
 }
