--- a/src/mods/GuessAppWidget/style.css
+++ b/src/mods/GuessAppWidget/style.css
@@ -1,9 +1,10 @@
 .container {
   background-color: rgba(0, 0, 0, 0.5);
   /* position: absolute; */
-  position: absolute;
-  bottom: 60;
-  left: 24;
+  /* bottom: 60; */
+  /* left: 24; */
+  margin: 24;
+  margin-bottom: 0;
   border-radius: 24;
 }
 
