常用应用移东到主屏

--- a/src/mods/SystemStatusWidget/style.css
+++ b/src/mods/SystemStatusWidget/style.css
@@ -45,7 +45,7 @@
   width: 500;
   height: 48;
   border-radius: 24;
-  background-color: lightsteelblue;
+  background-color: cadetblue;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
