--- a/src/mods/GuessAppWidget/style.css
+++ b/src/mods/GuessAppWidget/style.css
@@ -3,6 +3,8 @@
   /* position: absolute; */
   /* bottom: 60; */
   /* left: 24; */
+  margin-left: 24;
+  margin-right: 24;
   margin-bottom: 24;
   border-radius: 24;
 }
